[package]
name = "pg-learned"
version = "0.1.0"
edition = "2021"
license = "Elastic-2.0"
description = "PostgreSQL extension demonstrating learned index technology"
homepage = "https://omendb.io"
repository = "https://github.com/omendb/pg-learned"

[lib]
crate-type = ["cdylib"]

[dependencies]
pgrx = "0.11"

[dev-dependencies]
pgrx-tests = "0.11"

[features]
default = ["pg16"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]